fix line name alignment

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   font-size: 1.5em;
   height: 4em;
   width: 15em;
+  vertical-align: super;
   /* position: relative;
   top: -2.2em;
   left: 3.1em; */
